       are not proposed by the Batch-Process form anymore.
     # A style issue in FireFox, in the form for displayed user's name, has been fixed.
     # A bug in brick reloading has been fixed (it crashes with several invalid IDs).
     # Apps :
        * Documents :
            - In new installations, Folders had no "assistants" bricks on their detail-view.
        * Billing :
            - An crash in the configuration of export (when the configured engine was not installed anymore) has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The widget 'creme_core.forms.header_filter.EntityCellsWidget' has been fixed
          to enable complex HTML representations produced by field printers.

    Breaking changes :
    ----------------------
        # No HistoryLine with <type=TYPE_AUX_EDITION> is created while the auxiliary instance is not reloaded.
          It could cause some unit tests (which check history) to fail.


== Version 2.5.4 ==

  Users side :
  ------------
     # Some icons in theme 'icecream' were accidentally passed in greyscale mode with the release <2.5.3>.
     # The style of very long menu entries has been improved.


== Version 2.5.3 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
     # Some issues with bad callback URLs on edition views after a bricks reloading have been fixed.
       Note: sadly, this fix makes the context of the visitor mode easier to lost ("Back" in your browser to get it back).
     # In the merge view :
        - There were issues with ManyToMany fields.
        - An error 500 , when one entity did not exist anymore, has been fixed.
     # The listview popup to select new mangers/employees & entity to merge has been fixed :
       now the entities remain filtered even with order or page change.
     # In the theme "Chantilly" :