@@ -15,6 +15,7 @@
         * Documents :
             - In new installations, Folders had no "assistants" bricks on their detail-view.
         * Billing :
+            - The order of lines was incorrect in exported data (PDF, xls): the order set manually with drag'n drop was not used.
             - An crash in the configuration of export (when the configured engine was not installed anymore) has been fixed.
 
   Developers side :
@@ -29,6 +30,10 @@
     ----------------------
         # No HistoryLine with <type=TYPE_AUX_EDITION> is created while the auxiliary instance is not reloaded.
           It could cause some unit tests (which check history) to fail.
+     # Apps :
+        * Billing :
+            - The method 'models.base.Base.get_lines()' only accepts model with an "order" field.
+              So if you created a custom line model which does not inherit 'models.line.Line' you should add this field.
 
 
 == Version 2.5.4 ==
